--- a/reactor.xcodeproj/xcshareddata/xcschemes/reactor.xcscheme
+++ b/reactor.xcodeproj/xcshareddata/xcschemes/reactor.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "reactor.app"
-               BlueprintName = "reactor"
-               ReferencedContainer = "container:reactor.xcodeproj">
+               BuildableName = "Reactor.app"
+               BlueprintName = "Reactor"
+               ReferencedContainer = "container:Reactor.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -29,9 +29,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "reactorTests.xctest"
-               BlueprintName = "reactorTests"
-               ReferencedContainer = "container:reactor.xcodeproj">
+               BuildableName = "ReactorTests.xctest"
+               BlueprintName = "ReactorTests"
+               ReferencedContainer = "container:Reactor.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -47,9 +47,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "reactorTests.xctest"
-               BlueprintName = "reactorTests"
-               ReferencedContainer = "container:reactor.xcodeproj">
+               BuildableName = "ReactorTests.xctest"
+               BlueprintName = "ReactorTests"
+               ReferencedContainer = "container:Reactor.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -57,9 +57,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "reactor.app"
-            BlueprintName = "reactor"
-            ReferencedContainer = "container:reactor.xcodeproj">
+            BuildableName = "Reactor.app"
+            BlueprintName = "Reactor"
+            ReferencedContainer = "container:Reactor.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </TestAction>
@@ -77,9 +77,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "reactor.app"
-            BlueprintName = "reactor"
-            ReferencedContainer = "container:reactor.xcodeproj">
+            BuildableName = "Reactor.app"
+            BlueprintName = "Reactor"
+            ReferencedContainer = "container:Reactor.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -96,9 +96,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "reactor.app"
-            BlueprintName = "reactor"
-            ReferencedContainer = "container:reactor.xcodeproj">
+            BuildableName = "Reactor.app"
+            BlueprintName = "Reactor"
+            ReferencedContainer = "container:Reactor.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
